chore: fix package.json

--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@8.14.0",
-  "description": "_description_",
+  "description": "A plugin for electron-log with unconfig",
   "author": "DogMan Zhan <zqj1130123899@gmail.com>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/dmZhan",
   "homepage": "https://github.com/dmZhan/electron-log-plugin#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dmZhan/electron-log-plugin.git"
   },
   "bugs": "https://github.com/dmZhan/electron-log-plugin/issues",
-  "keywords": [],
+  "keywords": [
+    "electron",
+    "electron-log",
+    "unconfig"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
