--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dmzj/electron-log-plugin",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.0-beta.1",
   "packageManager": "pnpm@8.14.0",
   "description": "A plugin for electron-log with unconfig",
   "author": "DogMan Zhan <zqj1130123899@gmail.com>",
