--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@dmzj/electron-log-plugin",
   "type": "module",
   "version": "0.0.0-beta.14",
-  "packageManager": "pnpm@8.14.0",
-  "description": "A plugin for electron-log with unconfig",
+  "packageManager": "pnpm@9.0.6",
+  "description": "A plugin for electron-log",
   "author": "DogMan Zhan <zqj1130123899@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/dmZhan/electron-log-plugin#readme",
@@ -14,8 +14,7 @@
   "bugs": "https://github.com/dmZhan/electron-log-plugin/issues",
   "keywords": [
     "electron",
-    "electron-log",
-    "unconfig"
+    "electron-log"
   ],
   "sideEffects": false,
   "exports": {
@@ -50,23 +49,22 @@
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
   },
+  "peerDependencies": {
+    "electron-log": ">=5.0.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
     "@antfu/ni": "^0.21.12",
-    "@antfu/utils": "^0.7.7",
-    "@dmzj/resolve-package-json": "0.0.1-beta.4",
+    "@dmzj/utils": "^0.0.5",
     "@types/node": "^20.11.16",
-    "@types/semver": "^7.5.6",
     "bumpp": "^9.2.1",
     "electron": "*",
-    "electron-log": "^5.1.0",
     "eslint": "^8.56.0",
     "esno": "^4.0.0",
     "fast-glob": "^3.3.2",
     "lint-staged": "^15.2.0",
     "pnpm": "^8.14.0",
     "rimraf": "^5.0.5",
-    "semver": "^7.6.0",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
